# serial-python

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  optional-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-py26.txt  setup.py
.github/: dependabot.yml
.github/workflows/: tests.yml
datalect/: __init__.py
datalect/core/: __init__.py  __version__.py
doc/: .gitignore  Makefile  conf.py  make.bat  requirements.txt  tutorial.md  tutorial.rst
docs/: conf.py  index.rst  tutorial.rst
serial/: __init__.py
serial/core/: __init__.py  __version__.py  _util.py  aggregate.py  buffer.py  cache.py  dtype.py  field.py  filter.py  reader.py  reduce.py  sort.py  stream.py  writer.py
test/: .gitignore  __init__.py  __main__.py  _fixture.py  buffer.py  buffer_test.py  cache.py  field.py  filter.py  pytest.ini  reader.py  reduce.py  requirements-py26.txt  requirements.txt  run_tests.py  sort.py  stream.py  stream_test.py  test_aggregate.py  test_buffer.py  test_cache.py  test_core.py  test_dtype.py  test_field.py  test_filter.py  test_reader.py  test_reduce.py  test_sort.py  test_stream.py  test_writer.py  writer.py  writer_test.py
tests/: __init__.py  buffer_test.py  cache_test.py  conftest.py  field_test.py  filter_test.py  pytest.ini  reader_test.py  reduce_test.py  requirements-py26.txt  requirements.txt  run_tests.py  sort_test.py  stream_test.py  test_buffer.py  test_cache.py  test_field.py  test_reader.py  test_reduce.py  test_sort.py  test_stream.py  writer_test.py
(+22 files in other folders)
