[project]
name = "serial-core"
description = "Read and write sequential data."
authors = [
    { name = "Michael Klatt", email = "mdklatt@alumni.ou.edu" },
]
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.3, < 8"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "serial.core.__version__"}
readme = {file = ["README.rst"], content-type = "text/x-rst"}
